@@ -374,6 +374,7 @@ static FB_WCHAR *hUTF32ToUTF16( const UTF_32 *src, FB_WCHAR *dst, ssize_t *chars
 			
 			if( c > UTF16_MAX_BMP )
 			{
+				c -= UTF16_HALFBASE;
 				*dst++ = (UTF_16)((c >> UTF16_HALFSHIFT) + UTF16_SUR_HIGH_START);				
 				c = ((c & UTF16_HALFMASK) + UTF16_SUR_LOW_START);
 				--charsleft;
@@ -398,6 +399,7 @@ static FB_WCHAR *hUTF32ToUTF16( const UTF_32 *src, FB_WCHAR *dst, ssize_t *chars
 
 			if( c > UTF16_MAX_BMP )
 			{
+				c -= UTF16_HALFBASE;
 				if( charsleft > 1 )
 				{
 					*dst++ = (UTF_16)((c >> UTF16_HALFSHIFT) + UTF16_SUR_HIGH_START);				
