@@ -33,6 +33,7 @@ Version 1.06.0
 - #837: Compiler hang (or assertion triggered, if enabled) for Select Case As Const with Case -1
 - ASM backend: Invalid code generated for Select Case As Const jump table index when 64bit fbc cross-compiles to 32bit
 - #836: The MyUdt() syntax for creating temporary objects allowed creating objects of Abstract types (with unimplemented Abstract methods)
+- WString conversions from UTF32 to UTF16 produced incorrect high surrogate values (affected conversion from UTF32 to Windows WString, and from Linux WString to UTF16)
 
 
 Version 1.05.0
